--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express"    : "~4.7.2",
-    "mongoose"   : "~3.6.2",
-    "morgan"     : "~1.2.2",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.5.2",
-    "method-override": "~2.1.2"
+    "crypto": "0.0.3",
+    "express": "~4.7.2",
+    "jwt-simple": "^0.3.0",
+    "method-override": "~2.1.2",
+    "mongoose": "~3.6.2",
+    "morgan": "~1.2.2"
   },
   "engines": {
     "node": "0.10.x"
