--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "body-parser": "~1.5.2",
     "crypto": "0.0.3",
     "express": "~4.7.2",
+    "fs": "0.0.2",
+    "gridfs-stream": "^1.1.1",
+    "http": "0.0.0",
     "jwt-simple": "^0.3.0",
     "method-override": "~2.1.2",
     "mongoose": "~3.6.2",
-    "morgan": "~1.2.2"
+    "morgan": "~1.2.2",
+    "multer": "0.1.8",
+    "node-schedule": "^0.2.7",
+    "socket.io": "^1.3.5"
   },
   "engines": {
     "node": "0.10.x"
